@@ -31,10 +31,6 @@ else
 fi
 
 PIDFILE="/var/run/sp-error-visualizer.pid"
-START_WITH_SYSLOG="-f /var/ftd-log/syslog | /usr/bin/sp-error-visualizer $VISUALIZER_OPTS"
-START_WITH_SOCKET="-s $VISUALIZER_OPTS"
-
-echo "Start of sp-error-visualizer initscript" > /tmp/sperv
 
 case "$1" in
   start)
@@ -42,19 +38,43 @@ case "$1" in
 		echo "sp-error-visualizer already running."
 	else
         	echo "Setting up the graphical display of errors"
+
 		if [ -e /dev/log ]; then
-		echo "Presence of syslog daemon, piping its output"
+		echo "Syslog daemon is present, piping its output"
 
 # This is still a bit messy. We should check for alternative locations.
 
 		tail -f /var/ftd-log/syslog | run-standalone.sh /usr/bin/sp-error-visualizer $VISUALIZER_OPTS &
 		else
 			echo "No syslog file, using syslog socket"
-			sp-error-visualizer -s $VISUALIZER_OPTS &
+			run-standalone.sh sp-error-visualizer -s $VISUALIZER_OPTS &
+			# a flag to indicate that syslog socket was
+			# created by us
+
+			touch /var/run/sp-error-visualizer-syslog-sock
 		fi
-		# Hmm. Do we actually _need_ to store this, or would the
-		# pidof work sufficiently well elsewhere too?
-		pidof -s sp-error-visualizer > /var/run/sp-error-visualizer.pid
+		# Hmm. Do we actually _need_ to store the PID, or would the
+		# pidof work sufficiently well later too?
+		# 
+		# As we start the error-visualizer in an async fashion,
+		# pidof might initially return an empty PID. On the other
+		# hand, waiting always a fixed amount of time is ugly,
+		# so let's check first whether we have a valid value and
+		# try again once if necessary.
+
+		VISUALIZER_PID=$(pidof -s sp-error-visualizer)
+
+		if [ "$VISUALIZER_PID" -lt 2 ]; then
+		    sleep 1
+		    VISUALIZER_PID=$(pidof -s sp-error-visualizer)
+		fi
+
+		if [ "$VISUALIZER_PID" -lt 2 ]; then
+		    echo "Could not start sp-error-visualizer!"
+		else
+		    echo $VISUALIZER_PID > /var/run/sp-error-visualizer.pid
+		fi
+
 	fi
         ;;
   stop)
@@ -63,6 +83,11 @@ case "$1" in
 		kill $(cat /var/run/sp-error-visualizer.pid)
 		rm /var/run/sp-error-visualizer.pid
 		echo "sp-error-visualizer stopped."
+
+		if [ -e /var/run/sp-error-visualizer-syslog-sock ]; then
+		    rm /dev/log
+		    rm /var/run/sp-error-visualizer-syslog-sock
+		fi
 	    else
 		echo "The sp-error-visualizer was not running."
 	    fi
