@@ -2,8 +2,11 @@ sp-error-visualizer (0.0.3-1) unstable; urgency=low
 
   * Moved the sp-error-visualizer startup to occur after both desktop
     and dbus, as it needs both in order to work properly.
+  * Fixed various initscript issues, including missing licence information
+  * Minor code cleanup
+  * Fixes: NB#59836
 
- -- Eero Tamminen <eero.tamminen@nokia.com>  Fri, 10 Aug 2007 13:40:21 +0300
+ -- Eero Tamminen <eero.tamminen@nokia.com>  Wed, 29 Aug 2007 14:50:48 +0300
 
 sp-error-visualizer (0.0.2-1) unstable; urgency=low
 
